syntax = "proto3";

package payment;

service PaymentService {
  rpc CreatePreference (CreatePreferenceRequest) returns (PreferenceResponse);
}

message CreatePreferenceRequest {
  string id = 1;
  string title = 2;
  int32 quantity = 3;
  int32 unitPrice = 4;
}

message PreferenceResponse {
  string id = 1;
}
